--- a/index.html
+++ b/index.html
@@ -278,54 +278,69 @@
     <img src="img/le-leo-emcasa.jpg" alt="Consultoria 3" />
   </div>
 
-  <div class="cards-planos">
-    <!-- Card MENSAL -->
+ <div class="cards-consultoria">
+    <!-- Plano Mensal -->
     <div class="card-consultoria styled">
-      <div class="card-topo">Plano Mensal</div>
-      <div class="card-preco">R$ 100,00/mês</div>
+      <div class="card-header">
+        <h3>Plano Mensal</h3>
+        <div class="preco">R$ 100,00/mês</div>
+      </div>
       <ul class="beneficios">
         <li>✓ App de acesso aos treinos</li>
         <li>✓ Planilha personalizada de treinos</li>
         <li>✓ Vídeos dos exercícios</li>
-        <li>✓ 1 treino trocado por mês</li>
+        <li>✓ 1 treino trocado mensalmente</li>
         <li>✓ Suporte direto com a gente</li>
         <li><s>E-book 5 verdades do emagrecimento – R$ 29,99</s></li>
         <li><s>E-book comer bem, viver saudável – R$ 49,99</s></li>
         <li>✓ Brinde surpresa entregue na sua casa</li>
       </ul>
-      <div class="preco-final">De R$ 129,99 por R$ 100,00</div>
+      <div class="selo-preco">De R$ 129,99<br><strong>Por R$ 100,00</strong></div>
       <a href="#" class="botao-card-glass">Quero esse!</a>
     </div>
 
-    <!-- Card TRIMESTRAL -->
+    <!-- Plano Trimestral -->
     <div class="card-consultoria styled">
-      <div class="card-topo">Plano Trimestral</div>
-      <div class="card-preco">R$ 90,00/mês</div>
+      <div class="card-header">
+        <h3>Plano Trimestral</h3>
+        <div class="preco">R$ 90,00/mês</div>
+      </div>
       <ul class="beneficios">
-        <li>✓ Todos os benefícios do plano mensal</li>
-        <li>✓ E-book comer bem e viver saudável – com receitas da Nutri Lorenna</li>
-        <li>✓ Prioridade nos desafios exclusivos</li>
+        <li>✓ App de acesso aos treinos</li>
+        <li>✓ Planilha personalizada de treinos</li>
+        <li>✓ Vídeos dos exercícios</li>
+        <li>✓ 3 treinos trocados mensalmente</li>
+        <li>✓ Suporte direto com a gente</li>
+        <li><s>E-book 5 verdades do emagrecimento – R$ 29,99</s></li>
+        <li><s>E-book comer bem, viver saudável – R$ 49,99</s></li>
+        <li>✓ Brinde surpresa entregue na sua casa</li>
       </ul>
-      <div class="preco-final">De R$ 349,98 por R$ 270,00</div>
+      <div class="selo-preco">De R$ 349,98<br><strong>Por R$ 270,00</strong></div>
       <a href="#" class="botao-card-glass">Quero esse!</a>
     </div>
 
-    <!-- Card SEMESTRAL -->
+    <!-- Plano Semestral -->
     <div class="card-consultoria styled">
-      <div class="card-topo">Plano Semestral</div>
-      <div class="card-preco">R$ 83,30/mês</div>
+      <div class="card-header">
+        <h3>Plano Semestral</h3>
+        <div class="preco">R$ 83,33/mês</div>
+      </div>
       <ul class="beneficios">
-        <li>✓ Todos os benefícios do plano mensal + trimestral</li>
-        <li>✓ Brinde físico extra entregue na sua casa</li>
-        <li>✓ Videochamada bônus com Lean & Leo</li>
-        <li><s>VSL "Verão sem Lesão" – R$ 89,90</s></li>
+        <li>✓ App de acesso aos treinos</li>
+        <li>✓ Planilha personalizada de treinos</li>
+        <li>✓ Vídeos dos exercícios</li>
+        <li>✓ 6 treinos trocados mensalmente</li>
+        <li>✓ Suporte direto com a gente</li>
+        <li><s>E-book 5 verdades do emagrecimento – R$ 29,99</s></li>
+        <li><s>E-book comer bem, viver saudável – R$ 49,99</s></li>
+        <li>✓ Brinde surpresa entregue na sua casa</li>
+        <li>✓ VSL “Verão sem Lesão” (Treino HIIT em casa) – R$ 89,90</li>
       </ul>
-      <div class="preco-final">De R$ 669,97 por R$ 500,00</div>
+      <div class="selo-preco">De R$ 669,97<br><strong>Por R$ 500,00</strong></div>
       <a href="#" class="botao-card-glass">Quero esse!</a>
     </div>
   </div>
 </section>
-
 
   </div>
 </section>
