--- a/index.html
+++ b/index.html
@@ -9,28 +9,24 @@
 </head>
 <body>
 
- <header>
+<header>
   <div class="topo">
     <div class="logo-container">
       <img src="img/logo-avatar-com-fundo.png" alt="Logo Lean&Leo Fit" class="logo" />
       <span class="logo-text">Lean&Leofit</span>
     </div>
 
-    <!-- Botão hambúrguer -->
-    <div class="hamburger" id="hamburger">
-      &#9776;
-    </div>
+    <div class="hamburger" onclick="toggleMenu()">☰</div>
 
-    <!-- Menu de navegação -->
-    <nav class="menu" id="menu">
-      <a href="index.html">Início</a>
-      <a href="#resultados">Resultados</a>
-      <a href="#consultoria">Consultoria Online</a>
-      <a href="ebooks.html">E-books</a>
-      <a href="veraosemlesao.html">Verão sem Lesão</a>
-      <a href="produtos-presenciais.html">Produtos presenciais</a>
-      <a href="blog.html">Blog</a>
-      <a href="sobre.html">Sobre nós</a>
+    <nav class="menu">
+      <a href="index.html">Início</a><span class="dot">•</span>
+      <a href="#resultados">Resultados</a><span class="dot">•</span>
+      <a href="#consultoria">Consultoria Online</a><span class="dot">•</span>
+      <a href="ebooks.html">E-books</a><span class="dot">•</span>
+      <a href="veraosemlesao.html">Verão sem Lesão</a><span class="dot">•</span>
+      <a href="produtos-presenciais.html">Produtos presenciais</a><span class="dot">•</span>
+      <a href="blog.html">Blog</a><span class="dot">•</span>
+      <a href="sobre.html">Sobre nós</a><span class="dot">•</span>
       <a href="#contato">Contato</a>
     </nav>
   </div>
